--- a/app/src/main/res/layout/layout_description.xml
+++ b/app/src/main/res/layout/layout_description.xml
@@ -25,11 +25,12 @@
 		android:lineSpacingExtra="6dp"
 		android:alpha="0.9"
 		style="@style/TextLabel"
-		app:ep_need_link="false"
-		app:ep_need_mention="true"
+		app:ep_need_link="true"
+		app:ep_need_mention="false"
+		app:ep_need_self="true"
 		app:ep_max_line="4"
-		app:ep_contract_text="@string/hide"
-		app:ep_expand_text="@string/detail"
+		app:ep_contract_text="@string/action_read_less"
+		app:ep_expand_text="@string/action_read_more"
 		app:ep_need_contract="true"
 		app:ep_need_animation="true"
 		app:ep_expand_color="?attr/colorAccent" />
