--- a/app/src/main/res/layout/layout_info.xml
+++ b/app/src/main/res/layout/layout_info.xml
@@ -1,196 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:layout_height="wrap_content"
-	android:layout_width="fill_parent"
-	android:orientation="vertical"
-	android:layout_marginTop="16dp"
-	android:id="@+id/ll_info">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/ll_info"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="16dp"
+    android:orientation="vertical">
 
-	<LinearLayout
-		android:layout_height="wrap_content"
-		android:layout_width="fill_parent"
-		android:orientation="vertical"
-	>
+    <!--details info layout-->
 
-		<LinearLayout
-			android:paddingEnd="16dp"
-			android:paddingStart="16dp"
-			android:layout_height="fill_parent"
-			android:layout_width="fill_parent"
-			android:orientation="vertical">
+    <TableLayout
+        android:id="@+id/table_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp">
 
-			<LinearLayout
-				android:layout_height="fill_parent"
-				android:layout_width="fill_parent"
-				android:visibility="gone"
-				android:gravity="center_vertical"
-				android:orientation="horizontal"
-				android:id="@+id/year_layout">
+        <!-- test -->
+        <!--<include
+             layout="@layout/item_details_info_row"
+             android:id="@+id/item_details_info_row"/>-->
 
-				<TextView
-					android:layout_height="wrap_content"
-					android:layout_width="wrap_content"
-					style="@style/TextLabel"
-					android:text="@string/year" />
+    </TableLayout>
 
-				<TextView
-					android:layout_height="wrap_content"
-					android:layout_width="fill_parent"
-					android:gravity="center_vertical"
-					android:layout_marginStart="8dp"
-					android:id="@+id/tv_year" />
+    <!--genres layout-->
+    <TextView
+        style="@style/LayoutHeader"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="@string/genre" />
 
-			</LinearLayout>
-
-			<LinearLayout
-				android:layout_height="fill_parent"
-				android:layout_width="fill_parent"
-				android:visibility="gone"
-				android:gravity="center_vertical"
-				android:orientation="horizontal"
-				android:layout_marginTop="2dp"
-				android:id="@+id/director_layout">
-
-				<TextView
-					android:layout_height="wrap_content"
-					android:layout_width="wrap_content"
-					style="@style/TextLabel"
-					android:text="@string/director" />
-
-				<TextView
-					android:layout_height="wrap_content"
-					android:layout_width="fill_parent"
-					android:gravity="center_vertical"
-					android:linksClickable="true"
-					android:layout_marginStart="8dp"
-					android:id="@+id/tv_director" />
-
-			</LinearLayout>
-
-			<LinearLayout
-				android:layout_height="wrap_content"
-				android:layout_width="fill_parent"
-				android:visibility="gone"
-				android:orientation="horizontal"
-				android:layout_marginTop="2dp"
-				android:id="@+id/studio_layout">
-
-				<TextView
-					android:layout_height="wrap_content"
-					android:layout_width="wrap_content"
-					style="@style/TextLabel"
-					android:text="@string/studio" />
-
-				<TextView
-					android:layout_height="wrap_content"
-					android:layout_width="fill_parent"
-					android:gravity="center_vertical"
-					android:linksClickable="true"
-					android:layout_marginStart="8dp"
-					android:lineSpacingExtra="4.0sp"
-					android:id="@+id/tv_studio" />
-
-			</LinearLayout>
-
-			<LinearLayout
-				android:layout_height="fill_parent"
-				android:layout_width="fill_parent"
-				android:visibility="gone"
-				android:gravity="center_vertical"
-				android:orientation="horizontal"
-				android:layout_marginTop="2dp"
-				android:id="@+id/episodes_layout">
-
-				<TextView
-					android:layout_height="wrap_content"
-					android:layout_width="wrap_content"
-					style="@style/TextLabel"
-					android:text="@string/series" />
-
-				<TextView
-					android:layout_height="wrap_content"
-					android:layout_width="fill_parent"
-					android:gravity="center_vertical"
-					android:linksClickable="true"
-					android:layout_marginStart="8dp"
-					android:id="@+id/tv_episodes" />
-
-			</LinearLayout>
-
-			<LinearLayout
-				android:layout_height="fill_parent"
-				android:layout_width="fill_parent"
-				android:visibility="gone"
-				android:gravity="center_vertical"
-				android:orientation="horizontal"
-				android:layout_marginTop="2dp"
-				android:id="@+id/translation_layout">
-
-				<TextView
-					android:layout_height="wrap_content"
-					android:layout_width="wrap_content"
-					style="@style/TextLabel"
-					android:text="@string/translation" />
-
-				<TextView
-					android:layout_height="wrap_content"
-					android:layout_width="fill_parent"
-					android:gravity="center_vertical"
-					android:linksClickable="true"
-					android:layout_marginStart="8dp"
-					android:id="@+id/tv_transators" />
-
-			</LinearLayout>
-
-			<LinearLayout
-				android:layout_height="fill_parent"
-				android:layout_width="fill_parent"
-				android:visibility="gone"
-				android:gravity="center_vertical"
-				android:orientation="horizontal"
-				android:layout_marginTop="2dp"
-				android:id="@+id/dubbers_layout">
-
-				<TextView
-					android:layout_height="wrap_content"
-					android:layout_width="wrap_content"
-					style="@style/TextLabel"
-					android:text="@string/dubbers" />
-
-				<TextView
-					android:layout_height="wrap_content"
-					android:layout_width="fill_parent"
-					android:gravity="center_vertical"
-					android:linksClickable="true"
-					android:layout_marginStart="8dp"
-					android:id="@+id/tv_dubbers" />
-
-			</LinearLayout>
-
-		</LinearLayout>
-
-		<TextView
-			android:layout_height="wrap_content"
-			android:layout_width="match_parent"
-			android:padding="10dp"
-			style="@style/LayoutHeader"
-			android:text="@string/genre" />
-
-		<com.google.android.material.chip.ChipGroup
-			android:layout_height="wrap_content"
-			android:layout_width="wrap_content"
-			android:paddingStart="10dp"
-			android:paddingEnd="10dp"
-			android:visibility="gone"
-			android:layout_marginBottom="2dp"
-			app:chipSpacingVertical="4dp"
-			app:chipSpacingHorizontal="4dp"
-			app:chipSpacing="0dp"
-			app:singleLine="false"
-			android:id="@+id/genres_chip_group" />
-
-	</LinearLayout>
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/genres_chip_group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:visibility="gone"
+        app:chipSpacing="0dp"
+        app:chipSpacingHorizontal="4dp"
+        app:chipSpacingVertical="4dp"
+        app:singleLine="false" />
 
 </LinearLayout>
